taskcar-motor-driver/build/log/idf_py_stderr_output_59853
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c: In function 'app_main':
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c:18:5: error: implicit declaration of function 'vTaskDelay' [-Werror=implicit-function-declaration]
   18 |     vTaskDelay(2000 / portTICK_PERIOD_MS);  // Run for 2 seconds
      |     ^~~~~~~~~~
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c:18:23: error: 'portTICK_PERIOD_MS' undeclared (first use in this function)
   18 |     vTaskDelay(2000 / portTICK_PERIOD_MS);  // Run for 2 seconds
      |                       ^~~~~~~~~~~~~~~~~~
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c:18:23: note: each undeclared identifier is reported only once for each function it appears in
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5663: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
